NetBSD Problem Report #29924

From hannken@eis.cs.tu-bs.de  Fri Apr  8 09:55:42 2005
Return-Path: <hannken@eis.cs.tu-bs.de>
Received: from bseis.eis.cs.tu-bs.de (bseis.eis.cs.tu-bs.de [134.169.33.1])
	by narn.netbsd.org (Postfix) with ESMTP id 4751163B116
	for <gnats-bugs@gnats.netbsd.org>; Fri,  8 Apr 2005 09:55:16 +0000 (UTC)
Message-Id: <200504080955.j389t93O010800@watcher.eis.cs.tu-bs.de>
Date: Fri, 8 Apr 2005 11:55:09 +0200 (MEST)
From: Juergen Hannken-Illjes <hannken@eis.cs.tu-bs.de>
Reply-To: hannken@eis.cs.tu-bs.de
To: gnats-bugs@netbsd.org
Subject: ?yamt-km: sparc: assertion "(align & (align - 1)) == 0" failed
X-Send-Pr-Version: 3.95

>Number:         29924
>Category:       port-sparc
>Synopsis:       ?yamt-km: sparc: assertion "(align & (align - 1)) == 0" failed
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    yamt
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Apr 08 09:56:00 +0000 2005
>Closed-Date:    Wed Apr 20 05:23:17 +0000 2005
>Last-Modified:  Wed Apr 20 05:23:17 +0000 2005
>Originator:     Juergen Hannken-Illjes
>Release:        NetBSD 3.99.3
>Organization:

>Environment:


Architecture: sparc
Machine: sparc
>Description:
Booting this kernel gives:

SPARCstation 20 MP (2 X SuperSPARC-II), No Keyboard
ROM Rev. 2.22, 320 MB memory installed, Serial #3827134.
Ethernet address 0:40:dc:3a:65:be, Host ID: 723a65be.



Rebooting with command:                                               
Boot device: /iommu/sbus/espdma@f,400000/esp@f,800000/sd@0,0  File and args: 
>> NetBSD/sparc Secondary Boot, Revision 1.13
>> (hannken@watcher, Tue Feb  4 12:43:59 MET 2003)
Booting netbsd
3399512+105684+220740 [196560+178087]=0x3f9514
OBP version 3, revision 2.22 (plugin rev 2)
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 3.99.3 (K_STD.sparc) #0: Fri Apr  8 09:38:24 MEST 2005
        root@watcher:/build/dist/obj/sparc/sys/arch/sparc/compile/K_STD.sparc
total memory = 319 MB
avail memory = 307 MB
bootpath: /iommu@f,e0000000/sbus@f,e0001000/espdma@f,400000/esp@f,800000/sd@0,0
mainbus0 (root): SUNW,SPARCstation-20L: hostid 723a65be
cpu0 at mainbus0panic: kernel diagnostic assertion "(align & (align - 1)) == 0" failed: file "/build/dist/src/sys/uvm/uvm_map.c", line 1513
Stopped in pid 0.1 (swapper) at netbsd:cpu_Debugger+0x4:        or              %o7, %g0, %g1
db{0}> bt
cpu_Debugger(0xf0341b28, 0xf03025b8, 0xf032d800, 0xf032d1d0, 0x100, 0xf0362000) at netbsd:__assert+0x18
__assert(0xf03025b8, 0xf032d1d0, 0x5e9, 0xf032d800, 0x40500, 0x8) at netbsd:uvm_map_findspace+0x46c
uvm_map_findspace(0xf03861d8, 0xf0000000, 0x9000, 0xf0359960, 0x0, 0xffffffff) at netbsd:uvm_map_prepare+0xb8
uvm_map_prepare(0xf03861d8, 0xf0000000, 0x9000, 0x0, 0xffffffff, 0xffffffff) at netbsd:uvm_map+0x98
uvm_map(0xf03861d8, 0xf0359a1c, 0x9000, 0x0, 0xffffffff, 0xffffffff) at netbsd:alloc_cpuinfo_global_va+0x88
alloc_cpuinfo_global_va(0x1, 0x0, 0x0, 0x0, 0x8, 0xf09ccf38) at netbsd:cpu_attach+0x54
cpu_attach(0xf0b05f40, 0xffd6f140, 0x8, 0x0, 0x10, 0xf09ccf50) at netbsd:cpu_mainbus_attach+0x24
cpu_mainbus_attach(0xf0b05f80, 0xf0b05f40, 0xf0359c90, 0x0, 0x3c, 0x5) at netbsd:config_attach_loc+0x3ac
config_attach_loc(0xf0b05f40, 0xf035cb24, 0x0, 0xf0359c90, 0x0, 0xf0b05f80) at netbsd:mainbus_attach+0x5bc
mainbus_attach(0xf0367430, 0xf0b05f80, 0xf0300500, 0xf0359c70, 0xf0367400, 0xf0359c00) at netbsd:config_attach_loc+0x3ac
config_attach_loc(0xf0b05f80, 0xf035cb24, 0x0, 0x0, 0x0, 0x0) at netbsd:cpu_configure+0xa4
cpu_configure(0xf0b05fc0, 0x14, 0xf0328aa8, 0x0, 0x0, 0xf0326ee8) at netbsd:configure+0x58
configure(0x4dd9, 0x41a0, 0xf0398000, 0x20000000, 0x0, 0x800000) at netbsd:main+0x310
main(0x0, 0xfffffff8, 0x0, 0x0, 0x0, 0xf0002270) at netbsd:ft_want_ast+0xf88
db{0}> 

>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:
From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/29924 CVS commit: src/sys/arch/sparc/sparc
Date: Sat,  9 Apr 2005 07:16:38 +0000 (UTC)

 Module Name:	src
 Committed By:	yamt
 Date:		Sat Apr  9 07:16:38 UTC 2005

 Modified Files:
 	src/sys/arch/sparc/sparc: cpu.c

 Log Message:
 alloc_cpuinfo_global_va: don't bother to specify alignment to uvm_map.
 we'll do a partial unmap dance later anyway.  PR/29924.


 To generate a diff of this commit:
 cvs rdiff -r1.187 -r1.188 src/sys/arch/sparc/sparc/cpu.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->yamt
Responsible-Changed-By: yamt@netbsd.org
Responsible-Changed-When: Sat, 09 Apr 2005 07:19:55 +0000
Responsible-Changed-Why:
seems like my bug.


From: YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: kern/29924: ?yamt-km: sparc: assertion "(align & (align - 1)) ==
 0" failed
Date: Sat, 09 Apr 2005 16:19:05 +0900

 > >Number:         29924
 > >Category:       kern
 > >Synopsis:       ?yamt-km: sparc: assertion "(align & (align - 1)) == 0" failed

 can you figure out the value of "align"?
 and please try cpu.c rev.1.188.

 YAMAMOTO Takashi

From: Juergen Hannken-Illjes <hannken@eis.cs.tu-bs.de>
To: YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
Cc: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
	gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: kern/29924: ?yamt-km: sparc: assertion "(align & (align - 1)) == 0" failed
Date: Sat, 9 Apr 2005 10:36:09 +0200

 On Sat, Apr 09, 2005 at 04:19:05PM +0900, YAMAMOTO Takashi wrote:
 > > >Number:         29924
 > > >Category:       kern
 > > >Synopsis:       ?yamt-km: sparc: assertion "(align & (align - 1)) == 0" failed
 > 
 > can you figure out the value of "align"?
 > and please try cpu.c rev.1.188.

 align is 36864, PAGE_SIZE is 4096.

 With cpu.c rev.1.188 the machine boots and runs.

 Thanks,
 -- 
 Juergen Hannken-Illjes - hannken@eis.cs.tu-bs.de - TU Braunschweig (Germany)

State-Changed-From-To: open->closed
State-Changed-By: yamt@netbsd.org
State-Changed-When: Wed, 20 Apr 2005 05:23:17 +0000
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.