alloc_cpuinfo_global_va: don't bother to specify alignment to uvm_map. we'll do a partial unmap dance later anyway.  PR/29924.